--- a/gatsbyemailtemplate.html
+++ b/gatsbyemailtemplate.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>test</title>
+    <title>gatsby</title>
     <!-- <style> -->
   </head>
   <body>
